jgit (2.2.0-1) UNRELEASED; urgency=low

  * New Upstream release.
  * Remove /usr/share/java prefix from Class-Path entries.
  * Add dependency on libcommon-compress-java.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Thu, 20 Dec 2012 20:12:19 +0100

jgit (2.1.0-1) unstable; urgency=low

  * New Upstream release.
  * Refreshed debian-custom-build.patch.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Thu, 27 Sep 2012 16:54:42 +0200

jgit (2.0.0-2) unstable; urgency=low

  * Add breaks on eclipse-egit (<< 2.0) to ensure egit is
    upgraded together with libjgit-java.
  * Work around issue with the maven clean rule.

 -- Niels Thykier <niels@thykier.net>  Wed, 27 Jun 2012 12:28:15 +0200

jgit (2.0.0-1) unstable; urgency=low

  * New Upstream release.
  * Refreshed d/patches/debian-custom-build.patch.
  * Drop d/patches/tests-init-ant-project.patch. Applied upstream.
  * Removed eclipse-jgit dummy transitional package.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Sun, 24 Jun 2012 12:36:22 +0200

jgit (1.3.0-2) unstable; urgency=low

  [ Jakub Adam ]
  * Fix test execution failure leading to FTBFS (Closes: #666612).
  * Bump Standards-Version to 3.9.3 (no changes required).

  [ tony mancill ]
  * Update d/copyright.  Update Format, add Source.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Sun, 01 Apr 2012 21:39:33 +0200

jgit (1.3.0-1) unstable; urgency=low

  * New Upstream release.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Sat, 18 Feb 2012 14:53:28 +0100

jgit (1.2.0-2) unstable; urgency=low

  * Add d/watch.
  * Migrate dependency on libservlet2.4-java to libservlet-2.5-java.
    (Closes: #658807)

 -- Jakub Adam <jakub.adam@ktknet.cz>  Tue, 03 Jan 2012 19:49:36 +0100

jgit (1.2.0-1) unstable; urgency=low

  * New Upstream release.
  * Rename source package to "jgit" as it is not dependent on Eclipse.
  * Use Maven for building.
  * Build org.eclipse.jgit.http.server. (Closes: #647930)
  * Rename eclipse-jgit binary package to libjgit-java and install its jars into