@@ -1,0 +1,1 @@
+usr/share/java/org.eclipse.jgit.ant.jar org.eclipse.jgit.jar ant.jar
