@@ -1,0 +1,1 @@
+libjgit-ant-java: copyright-should-refer-to-common-license-file-for-gpl
