@@ -13,10 +13,14 @@ DEB_MAVEN_INSTALL_DOC_TARGET :=
 install/libjgit-java::
 	mh_installpoms -plibjgit-java
 	mh_installjar -plibjgit-java -l org.eclipse.jgit/pom.xml org.eclipse.jgit/target/org.eclipse.jgit-*-r.jar
-	mh_installjar -plibjgit-java -l org.eclipse.jgit.ant/pom.xml org.eclipse.jgit.ant/target/org.eclipse.jgit.ant-*-r.jar
 	mh_installjar -plibjgit-java -l org.eclipse.jgit.http.server/pom.xml org.eclipse.jgit.http.server/target/org.eclipse.jgit.http.server-*-r.jar
 	mh_installjar -plibjgit-java -l org.eclipse.jgit.junit/pom.xml org.eclipse.jgit.junit/target/org.eclipse.jgit.junit-*-r.jar
 	mh_unpatchpoms -plibjgit-java
+
+install/libjgit-ant-java::
+	mh_installpoms -plibjgit-ant-java
+	mh_installjar -plibjgit-ant-java -l org.eclipse.jgit.ant/pom.xml org.eclipse.jgit.ant/target/org.eclipse.jgit.ant-*-r.jar
+	mh_unpatchpoms -plibjgit-ant-java
 
 install/jgit-cli::
 	mh_installpoms -pjgit-cli
