@@ -3,6 +3,8 @@ jgit (2.2.0-1) UNRELEASED; urgency=low
   * New Upstream release.
   * Remove /usr/share/java prefix from Class-Path entries.
   * Add dependency on libcommon-compress-java.
+  * Move JGit Ant tasks into separate binary package. Avoids in most
+    use cases unnecessary dependency on Ant.
 
  -- Jakub Adam <jakub.adam@ktknet.cz>  Thu, 20 Dec 2012 20:12:19 +0100
 
